--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integracion continua: madurez y productividad en el desarrollo de software</li>
+         <li> Integracion continua: madurez y productividad en el desarrollo de sofwares</li>
      </ul>
 </body>
 </html>
