--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant </li>
          <li> Docker </li>
-         <li> Ansible </li>
+         <li> Ansible: nuevo curso </li>
          <li> Integracion continua: madurez y productividad en el desarrollo de sofware</li>
      </ul>
 </body>
