Corrigiendo el nombre del curso de Docker

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
-         <li> Ansible: nuevo curso </li>
+         <li> Docker: Creando containers sin dolor de cabeza</li>
+         <li> Ansible </li>
          <li> Integracion continua: madurez y productividad en el desarrollo de sofware</li>
      </ul>
 </body>
