--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible </li>
          <li> Integracion continua: madurez y productividad en el desarrollo de sofware</li>
-         <li> Kubernetes</li>
+         <li> Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
 </html>
