--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando máquinas virtuales</li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
-         <li> Ansible </li>
+         <li> Ansible: Su Infraestucturas como código</li>
          <li> Integracion continua: madurez y productividad en el desarrollo de sofware</li>
          <li> Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
